--- a/public/css/public.css
+++ b/public/css/public.css
@@ -7,11 +7,10 @@ html {
 }
 
 body {
-  /*width: 100%;*/
   height: 100%;
   border: 0;
-  font: 13px/15px Verdana, Arial, Helvetica, sans-serif;
-  background: #FFFFFF;
+  font: 15px/18px Verdana, Arial, Helvetica, sans-serif;
+  background: #ffffff;
 }
 
 header {
@@ -19,24 +18,26 @@ header {
   margin: 0 auto;
   padding: 0;
   text-align: left;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 header h1 {
-  margin: 50px 0 0 0;
   text-align: center;
 }
 
 header h1 a {
   text-decoration: none;
   color: #000;
-  letter-spacing: 0.4em;
+  letter-spacing: 0.1em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 3rem;
 }
 
 header h1 a img.bike-icon {
+  margin-top: 20px;
   display: inline-block;
-  margin-bottom: 30px;
-  width: 75px;
+  margin-bottom: 15px;
+  width: 150px;
 }
 
 #main {
@@ -48,7 +49,7 @@ header h1 a img.bike-icon {
 
 .expanding-wrapper {
   position: absolute;
-  top: 450px;
+  top: 500px;
   left: 0;
   width: 100%;
   min-width: 980px;
@@ -63,7 +64,7 @@ footer {
   width: 980px;
   margin: 0 auto;
   padding: 10px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 
 ul#menu {
@@ -76,7 +77,7 @@ ul#menu {
 
 ul#menu li {
   float: left;
-  margin: 15px;
+  margin: 10px;
 }
 
 ul#menu li a {
@@ -87,10 +88,11 @@ ul#menu li a {
   text-decoration: none;
   color: #000;
   border: 1px solid #000;
+  border-radius: 3px;
 }
 
 ul#menu li a:hover {
-  background: #EEE;
+  background: #eee;
 }
 
 div#page {
@@ -98,8 +100,8 @@ div#page {
 }
 
 div#page.narrow {
-  width: 600px;
-  height: 600px;
+  width: 800px;
+  height: 700px;
 }
 
 div#page h2 {
@@ -107,7 +109,7 @@ div#page h2 {
 }
 
 div#page p {
-  font: 16px/20px Georgia, Times, "Times New Roman", serif;
+  font: 18px/20px "Times New Roman", serif;
 }
 
 img.inset {
@@ -117,18 +119,20 @@ img.inset {
 }
 
 table#inventory {
+  font-size: 1rem;
   margin-top: 30px;
   width: 980px;
   border-collapse: collapse;
 }
 
 table#inventory tr th {
-  background: #0B61A5;
-  color: #FFF;
+  background: #0b61a5;
+  color: #fff;
   text-align: left;
 }
 
-table#inventory tr td, table#inventory tr th {
+table#inventory tr td,
+table#inventory tr th {
   border: 1px solid #000;
   padding: 3px;
 }
@@ -146,4 +150,24 @@ table#inventory tr td, table#inventory tr th {
 }
 .detail dl dd {
   float: left;
+}
+
+.sort-button {
+  border: none;
+  margin: 10px;
+  color: white;
+  background-color: #0b61a5;
+  font-weight: 600;
+  text-transform: capitalize;
+  font-size: 1.2rem;
+  padding: 2px;
+}
+
+.sort-button:hover {
+  color: gold;
+  transition: color 0.5s;
+}
+
+.transform-color-case {
+  text-transform: capitalize;
 }
