--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -15,7 +15,7 @@ header {
   height: 40px;
   margin: 0 0 10px 0;
   padding: 0;
-  background: #0B61A5;
+  background: #0b61a5;
   color: white;
 }
 
@@ -64,7 +64,7 @@ footer {
   width: 100%;
   height: 40px;
   margin: 0 0 10px 0;
-  background: #0B61A5;
+  background-color: #0b61a5;
 }
 
 /* Actions */
@@ -73,12 +73,12 @@ footer {
   margin-bottom: 1em;
 }
 
-
 /* Lists */
 
 table {
   border-collapse: collapse;
   vertical-align: top;
+  font-size: 1.2rem;
 }
 
 table.list {
@@ -87,11 +87,13 @@ table.list {
 
 table.list tr td {
   border: 1px solid #999999;
+  padding: 5px;
 }
 
 table.list tr th {
-  border: 1px solid #0B61A5;
-  background: #0B61A5;
+  padding: 5px;
+  border: 1px solid #0b61a5;
+  background: #0b61a5;
   color: white;
   text-align: left;
 }
@@ -138,14 +140,13 @@ dd {
 /* Session Messages */
 
 #message {
-  color: #0B61A5;
+  color: #0b61a5;
   background: white;
-  border: 2px solid #0B61A5;
+  border: 2px solid #0b61a5;
   padding: 1em 15px;
   margin: 1em 30px;
   width: 890px;
 }
-
 
 /* Pagination */
 
@@ -153,7 +154,8 @@ dd {
   margin: 1em 0;
 }
 
-.pagination a, .pagination span {
+.pagination a,
+.pagination span {
   display: inline-block;
   margin: 0 5px;
 }
