--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -4,25 +4,20 @@ html {
 }
 
 body {
-  height: 650px;
   width: 100%;
   margin: 0;
   padding: 0;
 }
 
 header {
-  width: 100%;
-  height: 40px;
-  margin: 0 0 10px 0;
-  padding: 0;
+  padding: 2%;
   background: #0b61a5;
   color: white;
 }
 
 header h1 {
   margin: 0;
-  padding: 5px;
-  font-size: 20px;
+  font-size: 2rem;
   font-family: Verdana, Arial, Helvetica, sans-serif;
   text-align: center;
 }
@@ -37,7 +32,7 @@ navigation {
 navigation ul {
   width: 100%;
   list-style: none;
-  padding: 0;
+  padding: 10px;
   margin: 0;
 }
 
@@ -47,24 +42,8 @@ navigation ul li {
 }
 
 #content {
-  width: 95%;
-  min-height: 500px;
+  min-height: 438px;
   padding: 0 30px;
-}
-
-/* Footer */
-
-.copyright {
-  padding: 10px 20px;
-  text-align: center;
-  color: white;
-}
-
-footer {
-  width: 100%;
-  height: 40px;
-  margin: 0 0 10px 0;
-  background-color: #0b61a5;
 }
 
 /* Actions */
@@ -98,7 +77,35 @@ table.list tr th {
   text-align: left;
 }
 
+/* Main Menu */
+
+div #main-menu {
+  text-align: center;
+}
+
+#main-menu ul li {
+  text-decoration: none;
+  color: #333333;
+  font-weight: 700;
+  margin: 20px;
+  font-size: 1.2rem;
+}
+
+#main-menu ul li:hover {
+  color: white;
+  background-color: #0b61a5;
+}
+
 /* Forms */
+
+.form-fields {
+  display: inline-block;
+  border: 2px solid #0b61a5;
+  border-radius: 3px;
+  padding: 15px;
+  width: 500px;
+  border-radius: 3px;
+}
 
 dl {
   clear: both;
@@ -119,17 +126,18 @@ dd {
 
 #operations {
   clear: both;
-  margin: 1em 0 1em 75px;
+  margin: 1em 0 1em 0;
 }
 
 /* Errors */
 
 .errors {
-  display: inline-block;
   border: 2px solid red;
   color: red;
   padding: 1em;
   margin-bottom: 1em;
+  margin: 0 15% 1em 15%;
+  border-radius: 5px;
 }
 
 .errors ul {
@@ -163,4 +171,72 @@ dd {
 .pagination span.selected {
   font-weight: bold;
   color: #000;
+}
+
+.center-text {
+  text-align: center;
+}
+
+/* Registration Form */
+
+.form {
+  text-align: center;
+}
+
+.submit {
+  margin-top: 10px;
+  width: 235px;
+  height: 35px;
+}
+
+/* Vertical Line */
+hr {
+  border: none;
+  height: 1px;
+  background-color: #333;
+  width: 55%;
+  margin-top: 50px;
+}
+
+/* Buttons below the Form  */
+#outer {
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+}
+
+#outer a {
+  text-decoration: none;
+  color: #333333;
+  font-weight: 700;
+  margin: 20px;
+}
+
+#outer a:hover {
+  color: white;
+  background-color: #0b61a5;
+}
+
+.inner {
+  display: inline-block;
+  border: 2px solid #0b61a5;
+  border-radius: 3px;
+  padding: 5px;
+  width: 150px;
+}
+
+/* Footer */
+
+.copyright {
+  padding: 20px;
+  text-align: center;
+  color: white;
+}
+
+footer {
+  font-weight: 600;
+  width: 100%;
+  height: 60px;
+  background-color: #0b61a5;
 }
