--- a/public/css/public.css
+++ b/public/css/public.css
@@ -14,7 +14,7 @@ body {
 }
 
 header {
-  width: 980px;
+  /* width: 980px; */
   margin: 0 auto;
   padding: 0;
   text-align: left;
@@ -33,15 +33,8 @@ header h1 a {
   font-size: 3rem;
 }
 
-header h1 a img.bike-icon {
-  margin-top: 20px;
-  display: inline-block;
-  margin-bottom: 15px;
-  width: 150px;
-}
-
 #main {
-  width: 980px;
+  /* width: 980px; */
   height: 500px;
   margin: 0 auto;
   padding: 0;
@@ -49,10 +42,8 @@ header h1 a img.bike-icon {
 
 .expanding-wrapper {
   position: absolute;
-  top: 500px;
   left: 0;
   width: 100%;
-  min-width: 980px;
 }
 
 img#super-hero-image {
