--- a/public/css/public.css
+++ b/public/css/public.css
@@ -4,13 +4,13 @@
 html {
   height: 100%;
   width: 100%;
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
 }
 
 body {
   height: 100%;
   border: 0;
-  font-family: "Roboto", sans-serif;
-  font-size: 1rem;
   background: #ffffff;
 }
 
@@ -153,6 +153,12 @@ table#inventory tr th {
 
 .transform-color-case {
   text-transform: capitalize;
+}
+
+.about-bg-image {
+  background-image: url("../images/about.jpg");
+  width: 100%;
+  height: 100%;
 }
 
 footer {
