--- a/public/css/public.css
+++ b/public/css/public.css
@@ -141,8 +141,34 @@ table#inventory tr th {
 
 .about-bg-image {
   background-image: url("../images/about.jpg");
+  filter: blur(1px);
   width: 100%;
   height: 100%;
+}
+
+.contact-bg-image {
+  color: #fff;
+  filter: blur(3px);
+  background-image: url("../images/contacts.png");
+  width: 100%;
+  height: 100%;
+}
+
+.bg-text {
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  border-radius: 3rem 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
 }
 
 footer {
