--- a/public/css/public.css
+++ b/public/css/public.css
@@ -144,6 +144,7 @@ table#inventory tr th {
   filter: blur(1px);
   width: 100%;
   height: 100%;
+  background-size: cover;
 }
 
 .contact-bg-image {
@@ -152,6 +153,9 @@ table#inventory tr th {
   background-image: url("../images/contacts.png");
   width: 100%;
   height: 100%;
+  /* cover;
+   */
+  background-size: cover;
 }
 
 .bg-text {
@@ -162,12 +166,12 @@ table#inventory tr th {
   border: 3px solid #f1f1f1;
   border-radius: 3rem 0;
   position: absolute;
-  top: 50%;
+  top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
   width: 80%;
-  padding: 20px;
+  padding: 1rem;
   text-align: center;
 }
 
